- added current company skills detiails - download multiple page by clicking download on single pdf in multiple page - resolve downloaded file irreavent alignment to resolve by adding single line of code in index.css file

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {img {display: initial;}}
